u1_na_spr: update defconfig

--- a/arch/arm/configs/u1_na_spr_defconfig
+++ b/arch/arm/configs/u1_na_spr_defconfig
@@ -37,7 +37,7 @@ CONFIG_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE="/usr/local/arm/arm-eabi-4.4.3/bin/arm-eabi-"
+CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -219,7 +219,7 @@ CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_WRITE_UNLOCK_BH is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQ is not set
 # CONFIG_INLINE_WRITE_UNLOCK_IRQRESTORE is not set
-# CONFIG_MUTEX_SPIN_ON_OWNER is not set
+CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 
 #
@@ -415,9 +415,13 @@ CONFIG_LEGACY_HOTPLUG_POLICY=y
 #
 CONFIG_BUSFREQ=y
 # CONFIG_BUSFREQ_QOS is not set
-# CONFIG_BUSFREQ_OPP is not set
+CONFIG_BUSFREQ_OPP=y
 # CONFIG_DISPFREQ_OPP is not set
 # CONFIG_DEVFREQ_BUS is not set
+CONFIG_BUSFREQ_QOS_NONE=y
+# CONFIG_BUSFREQ_QOS_1024X600 is not set
+# CONFIG_BUSFREQ_QOS_1280X720 is not set
+# CONFIG_BUSFREQ_QOS_1280X800 is not set
 # CONFIG_MOTOR_IR_FILTER is not set
 # CONFIG_BUSFREQ_DEBUG is not set
 # CONFIG_BUSFREQ_INTERLOCK_CPUFREQ is not set
@@ -2183,6 +2187,8 @@ CONFIG_MALI400=y
 CONFIG_MALI_VER_R3P2=y
 # CONFIG_MALI400_DEBUG is not set
 # CONFIG_MALI400_PROFILING is not set
+CONFIG_MALI_DVFS=y
+CONFIG_MALI400_UMP=y
 # CONFIG_MALI_SHARED_INTERRUPTS is not set
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
@@ -2886,8 +2892,8 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_DEBUG_MUTEXES=y
+# CONFIG_DEBUG_SPINLOCK is not set
+# CONFIG_DEBUG_MUTEXES is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
